# mockInterview

./: .gitignore  PROJECT-PLAN.md  README.md  README_en.md  pyproject.toml
.github/: copilot-instructions.md
app/api/: routes.py
app/core/: config.py  database.py  (+1 more)
backend/python-brain/: .env.example  .gitignore  README.md  pyproject.toml
backend/python-brain/app/: main.py
backend/python-brain/app/api/: routes.py
backend/python-brain/app/core/: config.py  database.py  logging.py  request_context.py
backend/python-brain/app/llm/: __init__.py  prompts.py  structured.py
backend/python-brain/app/models/: db.py  schemas.py
backend/python-brain/app/services/: interview_engine.py  llm_client.py  report_service.py  resume_parser.py  stt_service.py
backend/python-brain/app/workflow/: state.py
backend/python-brain/app/workflows/: __init__.py  diffing.py  executors.py  facades.py  mission_guards.py  runtime.py  state_models.py
backend/python-brain/app/workflows/graphs/: __init__.py  interview_graph.py  report_graph.py  resume_graph.py
backend/python-brain/tests/: test_api_smoke.py  test_graph_builds.py  test_interview_engine.py  test_mission_guards.py  test_report_service.py  test_resume_graph.py  test_structured_llm_components.py  test_stt_and_llm.py  test_workflow_diffing.py  test_workflow_facades.py  test_workflow_runtime.py  test_workflow_state_models.py
backend/python-brain/tests/fixtures/: golden_sessions.json
backend/python-brain/tests/golden/: test_interview_turn_golden.py  test_report_golden.py
docs/: README.md
tests/: test_interview_engine.py
(+19 files in other folders)
